# chat-bot

./: chatbot.db  main.py  pyproject.toml  streamlit_app.py
app/core/: config.py  database.py
app/models/: __init__.py  chat_session.py  message.py  user.py
app/routes/: chat.py  message.py  session.py  user.py
app/schemas/: chat.py  message.py  session.py  user.py
app/services/: memory.py  message.py  session.py  user_service.py
app/services/llm/: llama.py
